# OpenTrading

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
migrations/: env.py
scripts/: bot.sh  com.opentrading.bot.plist
src/coin_trading/: app.py  config.py  dashboard.py  scheduler.py
src/coin_trading/agent/: __init__.py  context.py  graph.py  llm.py  schemas.py  service.py  state.py  tracing.py
src/coin_trading/agents/: __init__.py  graph.py  state.py
src/coin_trading/config/: __init__.py  settings.py
src/coin_trading/dashboard/: app.py
src/coin_trading/db/: __init__.py  models.py  session.py
src/coin_trading/exchange/: __init__.py  binance.py  bithumb.py  bithumb_ws.py  yfinance_client.py
src/coin_trading/execution/: __init__.py  live_bithumb.py  paper.py
src/coin_trading/indicators/: __init__.py
src/coin_trading/llm/: __init__.py  providers.py
src/coin_trading/market/: __init__.py  collector.py  indicators.py  news_coindesk.py
src/coin_trading/market_data/: __init__.py  collector.py
src/coin_trading/news/: __init__.py  providers.py
src/coin_trading/notifications/: __init__.py  gemini_summarizer.py  slack.py  telegram.py
src/coin_trading/portfolio/: __init__.py  service.py
tests/: test_bithumb_client.py  test_coindesk_news.py  test_context_builder.py  test_dashboard.py  test_indicators.py  test_live_executor.py  test_llm_providers.py  test_market_data_collector.py  test_portfolio_service.py  test_risk_engine.py  test_strategy_schema.py  test_trading_pipeline.py
(+32 files in other folders)
